<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="text_settings">Settings</string>
    <string name="dialog_no_usb_device_title">No USB Device Attached</string>
    <string name="dialog_no_usb_device_msg">Please connect a suitable USB DVB-TV device.</string>
    <string name="text_map">Map</string>
    <string name="text_stop">Stop</string>
    <string name="text_valid">Valid:</string>
    <string name="text_fixed">Fixed:</string>
    <string name="text_invalid">Invalid:</string>
    <string name="text_rate">Rate (fps):</string>
    <string name="text_range">Max range (nm):</string>
    <string name="text_bearing">Bearing:</string>
    <string name="text_running_in_background">ADS-B Flight Scanner running in the background.</string>
    <string name="text_press_again">Press again to exit.</string>
    <string name="text_1090_mhz">1090 MHz</string>
    <string name="text_978_mhz">978 MHz (UAT)</string>
    <string name="text_auto">Auto</string>
    <string name="text_set">Set</string>
    <string name="text_invalid_location">Invalid location</string>
    <string name="text_enter_latitude">Enter latitude</string>
    <string name="text_enter_longitude">Enter longitude</string>
    <string name="text_enter_elevation">Enter elevation</string>
    <string name="text_latitude">Latitude:</string>
    <string name="text_longitude">Longitude:</string>
    <string name="text_elevation">Elevation:</string>
    <string name="text_auto_detect">Auto detect</string>
    <string name="text_manually_set">Manually set to</string>
    <string name="prefs_text_1090">1090 MHz Only</string>
    <string name="prefs_text_978_mhz">978 MHz Only (UAT)</string>
    <string name="prefs_text_both">Both (toggle between 1090 and 978)</string>
    <string name="prefs_background_summary">Allow app to run in the background.</string>
    <string name="prefs_background_title">Run in background</string>
    <string name="prefs_auto_start_boot_summary">Allow app to start at boot if a dongle is already attached.</string>
    <string name="prefs_auto_start_boot_title">Auto-start at boot</string>
    <string name="prefs_scan_mode_summary">Set which radio band to scan.</string>
    <string name="prefs_scan_mode_title">Scan mode</string>
    <string name="prefs_keep_screen_on_summary">Keep the screen on while using the GUI.</string>
    <string name="prefs_keep_screen_on_title">Keep screen on</string>
    <string name="prefs_broadcast_summary">This will allow other devices/computers on your local network to view the map from a web browser.</string>
    <string name="prefs_broadcast_title">Broadcast on local network</string>
    <string name="prefs_licenses_summary">View a list of open source software used in this application.</string>
    <string name="prefs_licenses_title">Licenses</string>
    <string name="prefs_version_title">Version</string>
    <string name="prefs_dialog_scan_mode_title">Select Scan Mode</string>
    <string name="prefs_antenna_location_title">Antenna Location</string>
    <string name="prefs_export_data_title">Export Data</string>
    <string name="prefs_export_data_summary">Options for sharing data to other processors</string>
    <string name="prefs_avr_format_title">Export AVR Format</string>
    <string name="prefs_avr_format_summary">Data will be exported on TCP port 30002</string>
    <string name="prefs_beast_format_title">Export Beast Format</string>
    <string name="prefs_beast_format_summary">Data will be exported on TCP port 30005</string>

</resources>
